--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,22 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.parallax-prize {
+  background-image: url('./assets/bigwinbg.png');
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.parallax-prize.gradient {
+  background-image: linear-gradient(
+      to right,
+      rgb(108 6 88),
+      rgb(108 6 88 / 40%)
+    ),
+    url('./assets/bigwinbg.png');
+}
 
 /* Slider Animation */
 
